Fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
     position: absolute;
     z-index: 2;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
 #nav a {
@@ -20,4 +23,12 @@
 #nav a:hover {
     color: rgb(255, 0, 144);
     text-shadow: 0 0 8px rgb(255, 0, 144), 0 20px 30px rgb(255, 0, 144);
+}
+
+@media screen and (min-width: 1000px) {
+    #nav {
+        width: 300px;
+        height: 500px;
+        flex-direction: column;
+    }
 }
